 - Removed file VTConfig.inc. The former $ifdef ReverseFullExpandHotKey is now a flag in the 
   TVTMiscOption enumeration. The $ifdef TntSupport can be defined at the beginning of the unit VirtualTrees.

- Improved creation of IDragSourceHelper and added support for IDragSourceHelper2
- Fixed problem with drawing selection rectangle after canceled rename

October 04, 2012
 - Fixed issue regarding activating explorer theme

September 14, 2012
 - Fixed issue #222: FDottedBrush is never released in the tree is never shown

September 11, 2012
 - Fixed issue #52: Misalignement of CheckBox and TreeLine/Buttons
 - Fixed issue #43: VT stop repaint after Windows visual style change

September 10, 2012
 - Fixed issue #66: column auto-resize makes not aware of StaticText
 - Fixed issue #53: Misalignment Images Columns > 0
 - Fixed issue #176: Multiline Aligment Problem
 - Fixed issue #283: VTV no longer allows to drop above or below when using Full row selection
 - Fixed issue #173: Two suggestions about class member visibilities
 - Fixed issue #192: Fixed column painting bug when OffsetX > 0

 - Bug fix: Functions GetLastVisible and GetLastVisibleNoInit return correct results even if some anchestor of the last visible node is not effectively visible
 - Improvement: Added functions GetNextSiblingNoInit and GetPreviousSiblingNoInit
March 2012
- Fixed painting of Windows7/Vista style Explorer selection in case tsUseExplorerTheme is in TreeOptions
- Ctrl + A now selects all items
January 2012
 - Bug fix: Fixed a potential access violation in TBaseVirtualTree.FullCollapse in case of toChildrenAbove
September 2011
 - The property EmptyListMessage may now contain linebreaks in Delphi 2009 and higher, the text in now printed in dark gray.
 - Support for flat scroll bars has been removed.
 - Global variables InWin2k and IsWinXP, enum member hsXPStyle, function DrawXPButton() and support for Windows 2000 has been removed.